--- a/css/main.css
+++ b/css/main.css
@@ -516,27 +516,35 @@ input[type="search"],
 input[type="text"],
 input[type="tel"],
 input[type="url"],
+input[type="body"],
 input[type="password"],
-textarea,
 select {
-	display: block;
 	height: 6rem;
-	padding: 1.5rem 0;
-	border: 0;
+	width: 90%;
+	padding: 5px;
+	border: 1px solid;
 	outline: none;
-	vertical-align: middle;
-	color: #313131;
+	color: #ff0077;
 	font-family: "poppins-regular", sans-serif;
 	font-size: 1.5rem;
 	line-height: 3rem;
 	max-width: 100%;
 	background: transparent;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-	-moz-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	-webkit-transition: all 0.3s ease-in-out;
-	-ms-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
+}
+textarea {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+		width: 90%;
+		padding: 5px;
+		border: 1px solid;
+		outline: none;
+		color: #ff0077;
+		font-family: "poppins-regular", sans-serif;
+		font-size: 1.5rem;
+		line-height: 3rem;
+		max-width: 100%;
+		background: transparent;
 }
 .ss-custom-select {
 	position: relative;
@@ -645,6 +653,9 @@ label > input[type="checkbox"], label > input[type="radio"] {
  *
  * -------------------------------------------------------------------
  */
+ .text-center {
+  text-align: center;
+}
 .button,
 a.button,
 button,
@@ -1346,6 +1357,14 @@ header .logo a {
 	letter-spacing: .3rem;
 	text-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
 }
+#cont{
+color:White;
+
+}
+#mesage{
+	text-align: center;
+}
+
 .intro-content .intro-position {
 	font-family: "lora-regular", serif;
 	font-size: 1.7rem;
